--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -351,7 +351,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Common\SettingsConverter.cs" />
-    <EmbeddedResource Include="Resources\x360ce.Games.xml.gz" />
+    <EmbeddedResource Include="Resources\x360ce_Games.xml.gz" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
