--- a/trunk/x360ce.Engine/x360ce.Engine.csproj
+++ b/trunk/x360ce.Engine/x360ce.Engine.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Common\KeyValueList.cs" />
     <Compile Include="Common\SearchParameter.cs" />
     <Compile Include="Common\SearchResult.cs" />
+    <Compile Include="Common\Serializer.cs" />
     <Compile Include="Common\SettingsData.cs" />
     <Compile Include="Common\WebServiceClient.cs">
       <SubType>Component</SubType>
