--- a/trunk/x360ce.Web/Web.config
+++ b/trunk/x360ce.Web/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <appSettings>
     <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\Temp\;" />
+    <add key="OverridePrograms" value="Files/x360ce_Games.xml" />
   </appSettings>
   <system.web>
     <httpHandlers>
