--- a/x360ce/x360ce/x360ce.vcxproj
+++ b/x360ce/x360ce/x360ce.vcxproj
@@ -276,6 +276,7 @@
     <ClInclude Include="Controller.h" />
     <ClInclude Include="ControllerManager.h" />
     <ClInclude Include="ForceFeedback.h" />
+    <ClInclude Include="ControllerBase.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
