Actually running now with virtual base classes.

--- a/x360ce/x360ce/x360ce.vcxproj.filters
+++ b/x360ce/x360ce/x360ce.vcxproj.filters
@@ -49,6 +49,7 @@
       <Filter>x360ce</Filter>
     </ClInclude>
     <ClInclude Include="ControllerBase.h" />
+    <ClInclude Include="ForceFeedbackBase.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="x360ce">
