--- a/x360ce/x360ce/x360ce.vcxproj
+++ b/x360ce/x360ce/x360ce.vcxproj
@@ -277,6 +277,7 @@
     <ClInclude Include="ControllerManager.h" />
     <ClInclude Include="ForceFeedback.h" />
     <ClInclude Include="ControllerBase.h" />
+    <ClInclude Include="ForceFeedbackBase.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
