--- a/x360ce/x360ce/x360ce.vcxproj.filters
+++ b/x360ce/x360ce/x360ce.vcxproj.filters
@@ -19,6 +19,8 @@
     <ClCompile Include="ForceFeedback.cpp">
       <Filter>x360ce</Filter>
     </ClCompile>
+    <ClCompile Include="ControllerCombiner.cpp" />
+    <ClCompile Include="ForceFeedbackCombiner.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h">
@@ -50,6 +52,8 @@
     </ClInclude>
     <ClInclude Include="ControllerBase.h" />
     <ClInclude Include="ForceFeedbackBase.h" />
+    <ClInclude Include="ControllerCombiner.h" />
+    <ClInclude Include="ForceFeedbackCombiner.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="x360ce">
