Web points to GitHub now.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -97,12 +97,12 @@
           </conditions>
           <action type="Redirect" url="http://www.x360ce.com/{R:1}" redirectType="Permanent" />
         </rule>
-        <rule name="To http://code.google.com/p/x360ce/" stopProcessing="true">
+        <rule name="To https://github.com/x360ce/x360ce" stopProcessing="true">
           <match url="^$" />
           <conditions logicalGrouping="MatchAll">
             <add input="{HTTP_HOST}" pattern="^www\.x360ce\.com$" />
           </conditions>
-          <action type="Redirect" url="http://code.google.com/p/x360ce/"
+          <action type="Redirect" url="https://github.com/x360ce/x360ce"
             redirectType="Permanent" />
         </rule>
       </rules>
