Fully implemented UI options to change PassThroughIndex, ForcesPassThrough, Combined and CombinedIndex. This includes full GUI support for combining controllers into virtual controllers.

--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -17,7 +17,8 @@
     </AssemblyOriginatorKeyFile>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <ApplicationIcon>app.ico</ApplicationIcon>
-    <StartupObject>x360ce.App.Program</StartupObject>
+    <StartupObject>
+    </StartupObject>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
