--- a/x360ce/x360ce/x360ce_vs2010.vcxproj.filters
+++ b/x360ce/x360ce/x360ce_vs2010.vcxproj.filters
@@ -19,6 +19,12 @@
     <ClCompile Include="ForceFeedback.cpp">
       <Filter>x360ce</Filter>
     </ClCompile>
+    <ClCompile Include="ControllerCombiner.cpp">
+      <Filter>x360ce</Filter>
+    </ClCompile>
+    <ClCompile Include="ForceFeedbackCombiner.cpp">
+      <Filter>x360ce</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Config.h">
@@ -46,6 +52,18 @@
       <Filter>x360ce</Filter>
     </ClInclude>
     <ClInclude Include="ControllerManager.h">
+      <Filter>x360ce</Filter>
+    </ClInclude>
+    <ClInclude Include="ForceFeedbackCombiner.h">
+      <Filter>x360ce</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerBase.h">
+      <Filter>x360ce</Filter>
+    </ClInclude>
+    <ClInclude Include="ControllerCombiner.h">
+      <Filter>x360ce</Filter>
+    </ClInclude>
+    <ClInclude Include="ForceFeedbackBase.h">
       <Filter>x360ce</Filter>
     </ClInclude>
   </ItemGroup>
