Support for force feedback effect direction parameters added.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -87,7 +87,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\BoardInfo.cs" />
+    <Compile Include="Common\Enum\EffectDirection.cs" />
     <Compile Include="Common\Enum\EnabledState.cs" />
+    <Compile Include="Common\Enum\EffectType.cs" />
     <Compile Include="Common\Enum\GameRefreshStatus.cs" />
     <Compile Include="Common\Enum\HookMask.cs" />
     <Compile Include="Common\Enum\XInputMask.cs" />
