--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -188,6 +188,12 @@
     <Compile Include="Controls\AboutControl.Designer.cs">
       <DependentUpon>AboutControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\AxisToButtonUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\AxisToButtonUserControl.Designer.cs">
+      <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\DirectInputControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -283,6 +289,9 @@
     <EmbeddedResource Include="Controls\AboutControl.resx">
       <DependentUpon>AboutControl.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\AxisToButtonUserControl.resx">
+      <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\DirectInputControl.resx">
       <DependentUpon>DirectInputControl.cs</DependentUpon>
@@ -458,6 +467,23 @@
     <None Include="Images\checkbox_undefined_16x16.png" />
     <None Include="Images\data_into_16x16.png" />
     <None Include="Images\data_out_16x16.png" />
+    <None Include="Images\Button_A.png" />
+    <None Include="Images\Button_B.png" />
+    <None Include="Images\Button_Back.png" />
+    <None Include="Images\Button_DPadDown.png" />
+    <None Include="Images\Button_DPadLeft.png" />
+    <None Include="Images\Button_DPadRight.png" />
+    <None Include="Images\Button_DPadUp.png" />
+    <None Include="Images\Button_LeftShoulder.png" />
+    <None Include="Images\Button_LeftThumb.png" />
+    <None Include="Images\Button_LeftTrigger.png" />
+    <None Include="Images\Button_RightShoulder.png" />
+    <None Include="Images\Button_RightThumb.png" />
+    <None Include="Images\Button_RightTrigger.png" />
+    <None Include="Images\Button_Start.png" />
+    <None Include="Images\Button_X.png" />
+    <None Include="Images\Button_Y.png" />
+    <None Include="Images\arrow_right_gray_16x16.png" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
