Refactored spaces to tabs, also updated .editorconfig, please use it : https://visualstudiogallery.msdn.microsoft.com/c8bccfe2-650c-4b42-bc5c-845e21f96328

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ insert_final_newline = true
 
 # 4 space indentation
 [*.{c,h,def}]
-indent_style = space
+indent_style = tab
 indent_size = 4
 
 # Trim trailing whitespaces
