--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 end_of_line = crlf
 insert_final_newline = true
 
-# 4 space indentation
+# tab indentation
 [*.{c,h,def}]
 indent_style = tab
 indent_size = 4
@@ -17,6 +17,6 @@ indent_size = 4
 [*.{c,h,def,txt}]
 trim_trailing_whitespace = true
 
-# UTF-8 with BOM
+# UTF-8
 [*.{c,h,def,txt}]
-charset=utf-8-bom
+charset=utf-8
