--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\AppHelper.cs" />
+    <Compile Include="Common\DeadZoneControlsLink.cs" />
     <Compile Include="Common\DeviceDetector.cs" />
     <Compile Include="Common\DeviceDetectorEventArgs.cs" />
     <Compile Include="Common\DeviceDetectorForm.cs">
