Saving game settings to cloud code update (part 1).

--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -157,6 +157,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\AppHelper.cs" />
+    <Compile Include="Common\CloudItem.cs" />
+    <Compile Include="Common\CloudState.cs" />
     <Compile Include="Common\DeadZoneControlsLink.cs" />
     <Compile Include="Common\DeviceDetector.cs" />
     <Compile Include="Common\DeviceDetectorEventArgs.cs" />
@@ -194,6 +196,12 @@
     </Compile>
     <Compile Include="Controls\AxisToButtonUserControl.Designer.cs">
       <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\CloudStorageUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\CloudStorageUserControl.Designer.cs">
+      <DependentUpon>CloudStorageUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\DirectInputControl.cs">
       <SubType>UserControl</SubType>
@@ -293,6 +301,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\AxisToButtonUserControl.resx">
       <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\CloudStorageUserControl.resx">
+      <DependentUpon>CloudStorageUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\DirectInputControl.resx">
       <DependentUpon>DirectInputControl.cs</DependentUpon>
