--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -267,10 +267,11 @@
     </Compile>
     <Compile Include="Html2Rtf\Converter.cs" />
     <Compile Include="Issues\ArchitectureIssue.cs" />
-    <Compile Include="Issues\IniFileIssue.cs" />
+    <Compile Include="Issues\DllFileIssue.cs" />
     <Compile Include="Issues\IssueSeverity.cs" />
     <Compile Include="Issues\LeakDetectorIssue.cs" />
     <Compile Include="Issues\MdkIssue.cs" />
+    <Compile Include="Issues\IniFileIssue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Common\DPadEnum.cs">
