Updated to v3.2.8.74 (2015-08-27) (public release) - Update: Updated x360ce_Games.xml.gz - Update: Updated to xinput1_3.dll v3.4.1.1357.

--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Common\DeviceDetectorForm.Designer.cs">
       <DependentUpon>DeviceDetectorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common\DeviceObjectItem.cs" />
     <Compile Include="Common\DirectInputState.cs" />
     <Compile Include="Common\Extensions.cs" />
     <Compile Include="Common\HookMode.cs" />
