--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -151,6 +151,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -522,6 +523,7 @@
     <None Include="Images\Button_X.png" />
     <None Include="Images\Button_Y.png" />
     <None Include="Images\arrow_right_gray_16x16.png" />
+    <None Include="Images\online_help_16x16.png" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
