--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -540,6 +540,7 @@
     <None Include="Images\arrow_right_gray_16x16.png" />
     <None Include="Images\online_help_16x16.png" />
     <None Include="Images\exit_16x16.png" />
+    <None Include="Images\map_to_16x16.png" />
     <Content Include="Images\tip_24x24.png" />
     <None Include="Images\update_16x16.png" />
     <Content Include="Presets\ReadMe.txt" />
