--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Common\Enum\EffectType.cs" />
     <Compile Include="Common\Enum\GameRefreshStatus.cs" />
     <Compile Include="Common\Enum\HookMask.cs" />
+    <Compile Include="Common\Enum\MapTo.cs" />
     <Compile Include="Common\Enum\XInputMask.cs" />
     <Compile Include="Common\EngineHelper.cs" />
     <Compile Include="Common\GameDatabaseManager.cs" />
