--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -103,7 +103,9 @@
     <Compile Include="Common\IWebService.cs" />
     <Compile Include="Common\KeyValue.cs" />
     <Compile Include="Common\KeyValueList.cs" />
+    <Compile Include="Common\Preset.cs" />
     <Compile Include="Common\SearchParameter.cs" />
+    <Compile Include="Common\SearchParameterCollection.cs" />
     <Compile Include="Common\SearchResult.cs" />
     <Compile Include="Common\Serializer.cs" />
     <Compile Include="Common\SettingsData.cs" />
