--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -112,7 +112,7 @@
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <connectionStrings>
-    <add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=S001;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=pastarola;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=S001;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=pastarola;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="x360ceModelContainer" connectionString="metadata=res://*/Data.x360ceModel.csdl|res://*/Data.x360ceModel.ssdl|res://*/Data.x360ceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SecurityEntities" connectionString="metadata=res://*/JocysCom.Security.Data.SecurityModel.csdl|res://*/JocysCom.Security.Data.SecurityModel.ssdl|res://*/JocysCom.Security.Data.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=x360ce;persist security info=True;user id=x360ceAdmin;password=localdev;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
